# mp4gainpy

./: CLAUDE.md  Cargo.toml  README.md  mp4gainpy.pyi  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
src/: aac.rs  error.rs  gain.rs  lib.rs  mp4.rs  python.rs
testdata/: regenerate.sh  tagged_tone.m4a
tests/: test_python_bindings.py
