[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "mp4gainpy"
version = "0.0.2"
description = "Minimal PyO3 bindings for static-gain AAC/M4A adjustment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.maturin]
features = ["python"]
