[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "m4againpy"
version = "0.0.5"
description = "Minimal PyO3 bindings for static-gain AAC/M4A adjustment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.maturin]
features = ["python"]
